Fix padding on pp page on mobile

--- a/uniu/src/styles/privacy-policy.css
+++ b/uniu/src/styles/privacy-policy.css
@@ -3,8 +3,14 @@
   width: 100%;
 
   margin-top: 6.2rem;
-  padding: 0 20rem;
+  padding: 0 2.5rem;
+
   padding-bottom: 20rem;
+
+  @media (--laptop) {
+    padding: 0 20rem;
+    padding-bottom: 20rem;
+  }
 
   h1 {
     margin-bottom: 5rem;
